--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,70 @@
 body {
-    background-color: orange; 
+    background-color: #F2F2F2; 
    }
+
+nav li  {
+    display: inline-block;
+}
+
+nav img {
+    width: 130px;
+}
+nav a {
+    font-size: 20px;
+    color: #0080FF;
+    text-decoration: none;
+    padding: 10px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+nav ul {
+    padding: 0px;
+}
+
+h1 {
+    color: #0080FF;
+    font-size: 40px;
+    text-align: center;
+}
+
+main img {
+    width: 13%;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    display: inline-block;
+    margin: 20px 0px;
+}
+
+.deal{
+    text-align: center;
+    padding: 2%;
+    
+}
+
+.maingames {
+    text-align: center;
+    padding: 2%;
+}
+
+footer {
+    background-color: #1B203D;
+    margin: 0px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
+
+footer a {
+    color: white;
+}
+
+footer img {
+    width: 130px;
+}
