--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,153 @@
 body {
     background-color: #F2F2F2; 
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
    }
 
-nav li  {
-    display: inline-block;
+   /*-------NAVBAR------*/
+
+nav {
+    background-color: #F2F2F2;
+    height: 100px;
+    width: 100%;
+    text-align: left;
 }
 
-nav img {
-    width: 130px;
-}
-nav a {
-    font-size: 20px;
-    color: #0080FF;
-    text-decoration: none;
-    padding: 10px;
-}
-
-nav a:hover {
-    text-decoration: underline;
+#logo {
+    margin: 15px; 
+    float: left;
+    height: 60px;
+    width: auto; 
+    border-radius: 50%;
 }
 
 nav ul {
-    padding: 0px;
+   display: flex;
+   list-style: none;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: center;
 }
 
-h1 {
-    color: #0080FF;
-    font-size: 40px;
+li {
+    display: inline-flex;
+}
+
+nav ul li #logo{
+    flex: 1;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+nav ul div.navlinks {
+    padding: 0 20px;
+    display: inline-flex;
+}
+
+nav ul li a {
+    font-size: 17px;
+    color:#1B203D;
+    text-decoration: none;
+    padding: 10px; 
+    font-weight: bold;
+}
+
+nav ul div.navlinks a:hover {
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0 12px;
+}
+
+nav ul .search-icon {
+    height: 40px;
+    width: 240px;
+    display: flex;
+    background: #ffffff;
+    border-radius: 8px;
+}
+
+nav ul .search-icon input {
+    height: 100%;
+    width: 200px;
+    border : 10px 0;
+    outline: none;
+    padding: 0 10px;
+    border-radius: 5px 0 0 5px;
+}
+
+nav ul .search-icon .icon {
+    height: 100%;
+    width: 40px;
+    line-height: 40px;
     text-align: center;
+    background: #707070;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 0 1 1 1;
 }
 
-main img {
-    width: 13%;
-    border-color: black;
-    border-style: solid;
-    border-width: 2px;
+
+nav ul .search-icon .icon:hover {
+    background: #1B203D;
+
+}
+
+nav ul .search-icon .icon {
+    color:#ffffff;
+    font-size: 18px;
+}
+
+nav ul .search-icon .icon span {
+    color: #ffffff;
+    font-size: 18px;
+}
+
+nav ul .cart-btn {
+    text-align: center;
+    height: 100%;
+    width: 25px;
+    background-color: #1B203D;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 2px 10px;
     display: inline-block;
-    margin: 20px 0px;
+    font-size: 20px;
 }
 
-.deal{
+nav ul .cart-btn i{
+    color: #ffffff;
+    height: 100%;
+    font-size: 20px;
+}
+
+nav img {
+    max-width: 200px;
+    width: 130px;
+}
+
+/*-----------NAVBAR---------*/
+
+/*-----------MENU---------*/
+menu {
+    text-align: center
+}
+menu ul {
+    display: inline-block;
     text-align: center;
-    padding: 2%;
-    
 }
 
-.maingames {
-    text-align: center;
-    padding: 2%;
+menu ul li {
+    padding: 40px;
+}
+menu ul li a {
+    text-decoration: none;
+    font-size: 30px;
+    color: #0080FF;
 }
 
+
+/*-----------MENU---------*/
+
+/*-------FOOTER--------*/
 footer {
     background-color: #1B203D;
     margin: 0px;
@@ -66,5 +164,7 @@ footer a {
 }
 
 footer img {
+    max-width: 200px;
     width: 130px;
 }
+/*-------FOOTER--------*/
