--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: 'Noto Sans', sans-serif;
+}
+
+
 body {
     background-color: #F2F2F2; 
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Atten New";
    }
 
    /*-------NAVBAR------*/
@@ -12,6 +17,8 @@ nav {
     text-align: left;
 }
 
+/*LOGO*/
+
 #logo {
     margin: 15px; 
     float: left;
@@ -19,6 +26,19 @@ nav {
     width: auto; 
     border-radius: 50%;
 }
+
+nav ul li #logo{
+    flex: 1;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+nav img {
+    max-width: 200px;
+    width: 130px;
+}
+
+/*LINKS*/
 
 nav ul {
    display: flex;
@@ -28,89 +48,95 @@ nav ul {
    justify-content: center;
 }
 
-li {
-    display: inline-flex;
+nav ul .navlinks li {
+    padding: 10px;
 }
-
-nav ul li #logo{
-    flex: 1;
-    font-size: 30px;
-    font-weight: 700;
-}
-
 nav ul div.navlinks {
-    padding: 0 20px;
-    display: inline-flex;
+    padding: 0 0 0 100px;
+    display: inline-block;
 }
 
 nav ul li a {
     font-size: 17px;
     color:#1B203D;
     text-decoration: none;
-    padding: 10px; 
     font-weight: bold;
+    font-family: 'Noto Sans';
 }
 
 nav ul div.navlinks a:hover {
     text-decoration: none;
-    font-size: 18px;
     padding: 0 12px;
+    color: #0080FF;
 }
 
 nav ul .search-icon {
-    height: 40px;
-    width: 240px;
+    height: 35px;
+    width: 200px;
     display: flex;
     background: #ffffff;
     border-radius: 8px;
+    border: solid black 1px;
 }
 
 nav ul .search-icon input {
     height: 100%;
-    width: 200px;
-    border : 10px 0;
+    width: 155px;
     outline: none;
     padding: 0 10px;
-    border-radius: 5px 0 0 5px;
+    border: none;
+    border-radius: 50%;
 }
 
 nav ul .search-icon .icon {
+    color:#ffffff;
+    font-size: 18px;    
     height: 100%;
-    width: 40px;
-    line-height: 40px;
+    width: 35px;
+    line-height: 35px;
     text-align: center;
-    background: #707070;
+    background: #b6b4b4;
     border-radius: 50%;
     cursor: pointer;
-    border: 0 1 1 1;
 }
 
 
 nav ul .search-icon .icon:hover {
     background: #1B203D;
-
-}
-
-nav ul .search-icon .icon {
-    color:#ffffff;
-    font-size: 18px;
 }
 
 nav ul .search-icon .icon span {
     color: #ffffff;
-    font-size: 18px;
+    font-size: 17px;
 }
 
+/*BUTTON*/
+
+nav .btn button{
+    background: #1B203D;
+    text-decoration: none;
+    border-radius:3px;
+}
+
+nav .btn a {
+    color: #FF8800;
+    border-radius:3px;
+}
+
+/*CARTBUTTON*/
+
 nav ul .cart-btn {
-    text-align: center;
     height: 100%;
     width: 25px;
     background-color: #1B203D;
     border-radius: 50%;
     padding: 10px;
-    margin: 2px 10px;
     display: inline-block;
     font-size: 20px;
+}
+
+nav ul .cart-btn:hover {
+    background: #0080FF;
 }
 
 nav ul .cart-btn i{
@@ -119,32 +145,35 @@ nav ul .cart-btn i{
     font-size: 20px;
 }
 
-nav img {
-    max-width: 200px;
-    width: 130px;
-}
-
 /*-----------NAVBAR---------*/
 
 /*-----------MENU---------*/
 menu {
-    text-align: center
-    
+    text-align: center;
+    width: 1200px 0;
 }
+
 menu ul {
     display: inline-block;
     text-align: center;
     border-bottom: black solid 2px;
+    padding-inline-start: 0;
 }
 
-menu ul li {
-    padding: 40px;
-    padding-bottom: 5px;
+li {
+    display: inline-flex;
 }
+
+
+menu ul li {
+    padding: 0 50px;
+}
+
 menu ul li a {
     text-decoration: none;
     font-size: 30px;
     color: #0080FF;
+    font-family: 'Noto Sans';  
 }
 
 /*-----------MENU---------*/
@@ -159,11 +188,17 @@ main .container img {
     width: 250px;
     display: inline-block;
     margin: 25px 100px;
+    box-shadow: 10px 10px 5px #ccc;
+    -moz-box-shadow: 10px 10px 5px #ccc;
+    -webkit-box-shadow: 10px 10px 5px #ccc;
+    -khtml-box-shadow: 10px 10px 5px #ccc;
 }
 
 h1 {
     text-align: center;
     color: #0080FF;
+    font-family: 'Noto Sans';
+    
 }
 
 main .maingames {
