--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,30 @@
 
-body {
-    background-color: #F2F2F2;
-    padding: 20px;
-    max-width: 100%;
-   }
-
-   /*-------NAVBAR------*/
-
-nav {
-    background-color: #F2F2F2;
-    height: 100px;
-    width: 100%;
-    text-align: left;
+header {
+	display: flex;
+	width: 80%;
+	height: 15vh;
+	margin: auto;
+	align-items: center;
 }
 
-/*LOGO*/
-
-#logo {
-    margin: 15px; 
-    position: relative;
-    height: 60px;
-    width: auto; 
-    border-radius: 50%;
+.logo, .nav-links, .cart {
+	display: flex;
 }
 
-nav img {
-    max-width: 200px;
-    width: 130px;
+.logo {
+    flex: 1;
+    margin-left: 50px;
 }
-
-/*LINKS*/
-
-nav ul {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
-
-nav ul .navlinks li {
-    padding: 10px;
-}
-nav ul div.navlinks {
-    padding: 0 0 0 150px;
-    display: inline-block;
-}
-
-nav ul li a {
-    font-size: 17px;
-    color:#1B203D;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'Noto Sans';
-}
-
-nav ul div.navlinks a:hover {
-    text-decoration: none;
-    color: #FF8800;
+.logo img{
+	width: 150px;
+	margin: 5px;
+    margin-right: 30px;
 }
 
 /*SEARCHBAR*/
 
-nav ul .search-icon {
+.search-icon {
+    margin-top: 25px;
     height: 35px;
     width: 200px;
     display: flex;
@@ -69,7 +33,7 @@ nav ul .search-icon {
     border: solid black 1px;
 }
 
-nav ul .search-icon input {
+.search-icon input {
     height: 100%;
     width: 155px;
     outline: none;
@@ -78,7 +42,7 @@ nav ul .search-icon input {
     border-radius: 50%;
 }
 
-nav ul .search-icon .icon {
+.search-icon .icon {
     color:#ffffff;
     font-size: 18px;    
     height: 100%;
@@ -90,94 +54,89 @@ nav ul .search-icon .icon {
     cursor: pointer;
 }
 
-
-nav ul .search-icon .icon:hover {
-    background: #0080FF;
-}
-
-nav ul .search-icon .icon span {
+.search-icon .icon span {
     color: #ffffff;
     font-size: 17px;
 }
 
-/*BUTTON*/
-
-nav .btn button{
-    background: #1B203D;
-    text-decoration: none;
-    border-radius:3px;
+.search-icon .icon:hover {
+    background: #0080FF;
 }
 
-nav .btn a {
-    color: #F2F2F2;
-    border-radius:3px;
+/*LINKS*/
+
+nav {
+	flex: 2;
+    margin-left: 0px;
+}
+.nav-links {
+	justify-content: space-around;
+	list-style: none;
+    padding-left: 0;
+    
+}
+.nav-links li {
+    margin-left: 150px;
+}
+.nav-link {
+	color: #1B203D;
+	font-size: 18px;
+    font-family: "noto sans";
+	text-decoration: none;
+    white-space: nowrap;
 }
 
-/*CARTBUTTON*/
+/*CART*/
 
-nav ul .cart-btn {
-    height: 100%;
-    width: 25px;
+.cart {
+	flex: 1;
+	justify-content: flex-end;
+    margin-left: 20px;
+}
+
+.cart-btn {
+    height: 50px;
+    width: 50px;
     background-color: #1B203D;
     border-radius: 50%;
     display: inline-block;
     font-size: 20px;
 }
 
-nav ul .cart-btn:hover {
+.cart-btn:hover {
     background: #0080FF;
 }
 
-nav ul .cart-btn i{
+.cart-btn i{
     color: #ffffff;
     height: 100%;
-    font-size: 20px;
+    width: 50px;
+    font-size: 25px;
+    margin-left: 10px;
+    margin-top: 12px;
 }
 
-label #btn, label #cancel {
-    color: #1B203D;
-    font-size: 30px;
-    cursor: pointer;
-    display: none;
+/*NAV2*/
+.nav2 {
+    margin-left: 0px;
 }
-#check {
-    display: none;
-}
-
-/*-----------MENU---------*/
-menu {
-    text-align: center;
-    width: 1200px 0;
-}
-
-menu ul {
-    display: inline-block;
+.nav2 ul {
+    padding-left: 0;
+    margin: auto;
+    align-items: center;
     border-bottom: black solid 2px;
-    padding-inline-start: 0;
 }
-
-menu ul li {
-    padding: 0 50px;
-    display: inline-flex;
+.nav2 li {
+    display: inline;
+    margin-left: 100px;
+    margin-right: 100px;
 }
-
-menu ul li a {
-    text-decoration: none;
-    font-size: 30px;
-    color: #0080FF;
-    font-family: 'Noto Sans'; 
-}
-
-menu ul li a:hover {
-    color: #FF8800;
-    text-decoration: underline;
-}
-
 
 /*-----------MAIN---------*/
 
 main .container{
     text-align: center;
+    margin-top: 40px;
 }
 
 main .container img {
@@ -214,21 +173,27 @@ main .maingames img {
 }
 
 /*----------Search Page--------*/
-
 .pagenav {
-    flex: 1;
-    text-align: right;
+    display: flex;
+    margin: auto;
 }
 
-.pagenav ul li{
-    list-style: none;
-    display: inline-block;
-    margin-left: 100px;
-    margin-right: 100px;
+.logo, .search-icon, .account {
+    flex: 1;
+}
+
+.pagenav img {
+    width: 150px;
+	margin: 5px;
+    margin-right: 30px;
 }
 
 /*SEARCHBAR*/
-.pagenav ul .search-icon {
+
+.search-icon li {
+    margin-left: 0px;
+}
+.pagenav .search-icon {
     height: 40px;
     width: 350px;
     display: flex;
@@ -237,7 +202,7 @@ main .maingames img {
     margin-bottom: 10px;
 }
 
-.pagenav ul .search-icon input {
+.pagenav .search-icon input {
     height: 100%;
     width: 300px;
     outline: none;
@@ -245,7 +210,7 @@ main .maingames img {
     border: none;
     font-size: 23px;
 }
-.pagenav ul .search-icon .icon {
+.pagenav .search-icon .icon {
     font-size: 18px;    
     height: 100%;
     width: 40px;
@@ -255,18 +220,32 @@ main .maingames img {
     cursor: pointer;
 }
 
-ul .pagenav .search-icon .icon:hover {
+.pagenav .search-icon .icon:hover {
     background: #0080FF;
 }
 
-ul .pagenav .search-icon .icon span {
+.pagenav .search-icon .icon span {
     color: #ffffff;
     font-size: 17px;
 }
 
-ul .pagenav li a {
+.pagenav li a {
     font-family: "Noto Sans";
     font-size: 18px;
+}
+
+/*Account*/
+
+.account {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.account a {
+    color: #1B203D;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "noto sans";
 }
 
 /*Main*/
@@ -330,6 +309,10 @@ nav {
     list-style: none;
     display: flex;
     align-items: center;
+}
+
+.accountpage {
+    margin: 0px;
 }
 
 
@@ -399,67 +382,80 @@ nav li a {
     font-family: "Open Sans";
     font-size: 15px;
     text-decoration: none;
-    position: static;
+    position: relative;
 }
 
 /*----Register/CreateAccount----*/
 
 /*NAV*/
 
-.background img{
-    opacity: 30%;
-    width: 80%;
-    height: 80%;
-    background-position: center;
+.bg {
+    background-image: url(/images/GameHub_Logocopy.svg);
     background-size: cover;
-    margin-left: 150px;
+    background-repeat: no-repeat;
+    
 }
 
-nav {
-    margin-left: 190px;
+.createacc {
+    display: flex;
 }
 
-nav li {
-    margin-left: 200px;
+.registertext, .registercancel{
+    flex: 1;
 }
 
-nav h1 {
-    margin-left: 200px;
+.registertext h1 {
     color: #1B203D;
-    font-size: 30px;
+    font-size: 29px;
+    letter-spacing: 2px;
+    white-space: nowrap;
+    font-family: "open sans";
 }
 
-nav li a {
+.registercancel {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.registercancel a {
     color: #0080FF;
-    font-size: 23px;
-    font-family: "Noto Sans";
+    text-decoration: none;
+    font-family: "open sans";
+    font-size: 25px;
 }
-
 /*RegisterForm*/
+
+.register {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 60px;
+}
 
 .registerform {
     padding: 16px;
-    margin-left: 720px;
+    display: inline-block;
+    margin-left: 50px;
 }
 
 input[type=text], input[type=password] {
     width: 300px;
     padding: 15px;
-    margin: 5px 0 22px 0;
+    margin: 0 0 22px 0;
+    margin-left: 40px;
     display: block;
     border: solid black 1px;
-    background: #f1f1f1;
+    background: white;
+    font-family: "open sans";
+    font-size: 17px;
   }
   
   input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
+    background-color: #f1f1f1;
     outline: none;
   }
   
-  hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-  }
+ 
 
   .registerbtn {
     background-color: #1B203D;
@@ -469,7 +465,6 @@ input[type=text], input[type=password] {
     border: none;
     cursor: pointer;
     width: 300px;
-    opacity: 0.9;
   }
   
   .registerbtn:hover {
@@ -478,11 +473,17 @@ input[type=text], input[type=password] {
   
   .registerform a {
     color: #FF8800;
+    text-decoration: none;
+    font-family: "noto sans";
+    font-size: 20px;
   }
 
+/*-------Checkout--------*/
 
-
-
+label {
+    color: #0080FF;
+    margin-right: 230px;
+}
 /*-------FOOTER--------*/
 footer {
     background-color: #1B203D;
