--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,11 @@ nav {
     margin-right: 100px;
 }
 
+.nav2 li a {
+    color: #0080FF;
+    font-size: 25px;
+}
+
 /*-----------MAIN---------*/
 
 main .container{
