--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: "Noto Sans", sans-serif;
+    position: relative;
 }
 ul {
     list-style-type: none;
@@ -59,7 +60,7 @@ main {
 .logo img{
 	width: 150px;
 	margin: 5px;
-    margin-right: 30px;
+    margin-right: 40px;
 }
 
 /*SEARCHBAR*/
@@ -219,7 +220,7 @@ main .games img {
     margin: 25px 25px;
 }
 
-/*----------Search Page--------*/
+/*----------Search Page-----------*/
 
 .search-icon, .account {
     flex: 1;
